# aiida-trains-pot

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .~lock.git_key.pub#  CLA.md  CONTRIBUTING.md  LICENSE  README.md  genindex.html  git_key  git_key.pub  git_ssh  git_ssh.pub  index.html  launch_mace_chain.py  launch_rattle_qe_lammps_chain.py  launch_rattle_qe_mace_lammps_chain.py  objects.inv  pyproject.toml  run_datasetgenerator_test_cm.py  run_datasetgenerator_test_gr.py  run_datasetgenerator_test_leonardo.py  search.html  searchindex.js  setup.py
.doctrees/module_guide/calculations/: evaluation.doctree  mace.doctree
.doctrees/module_guide/workchains/: abinitio_labelling_wc.doctree  augmentation_wc.doctree  exploration_wc.doctree  index.doctree  mace_wc.doctree  training_wc.doctree  trains_pot_wc.doctree
.doctrees/source/: index.doctree
.doctrees/source/module_guide/: datatypes.doctree  index.doctree  parsers.doctree  scripts.doctree
.doctrees/source/module_guide/calculations/: evaluation.doctree  index.doctree  (+1 more)
.doctrees/source/user_guide/: index.doctree
.github/workflows/: docs.yml  pre-commit.yml
Data/: Drautz_noSpin_short.xyz
Data/FLAKES_10R/: 00-README  code.py  copy_flake.sh
Data/MAVE_pot22289/: _scheduler-stderr.txt
Data/RattleStructures/: wte2-1t1_9x5.xyz
DatasetGenerator/: DatasetGeneratorWorkChain.py  dataset_generator_functions.py  run_datasetgenerator.py
DatasetGenerator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
LammpsWorkChain/: lammps_leo.yml
LammpsWorkChain/LammpsWorkChain/: LammpsWorkChain.py
LammpsWorkChain/LammpsWorkChain.egg-info/: top_level.txt
LoadStructure/: pdb_loader.py
MaceWorkChain/: mace_leo.yml  setup.py
MaceWorkChain/MaceWorkChain/: MaceWorkChain.py
MaceWorkChain/MaceWorkChain.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
QECalculation/: QECalculationWorkChain.py
QECalculation.egg-info/: entry_points.txt
RattleWorkChain/: setup.py
RattleWorkChain/RattleWorkChain/: RattleWorkChain.py
RattleWorkChain/RattleWorkChain.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
RuttleStructure/: RuttleStructureWorkChain.py
_modules/: index.html
_modules/aiida_trains_pot/aiida_trains_pot_workflow/: abinitiolabelling_wc.html  aiida_trains_pot_workflow.html  exploration_wc.html  training_wc.html
_modules/aiida_trains_pot/data/: pesdata.html
_modules/aiida_trains_pot/evaluation/: calculations.html  parsers.html
_modules/aiida_trains_pot/utils/: install_portable_codes.html
_sources/module_guide/: datatypes.rst
_sources/module_guide/calculations/: evaluation.rst  index.rst
aiida-lammps-base/: pyproject.toml
aiida-lammps-base/aiida_lammps_base/: calculations.py
aiida-mace-base/aiida_mace_base/: parsers.py
docs/: conf.py  installation.rst  introduction.rst  requirements.txt  usage.rst
docs/_build/doctrees/: api.doctree  environment.pickle  index.doctree  installation.doctree  introduction.doctree  usage.doctree
docs/_build/html/: .buildinfo  api.html  genindex.html  index.html  installation.html  introduction.html  objects.inv  py-modindex.html  search.html  searchindex.js  usage.html
docs/module_guide/: index.rst  scripts.rst
docs/module_guide/calculations/: mace.rst
docs/source/: conf.py  index.rst
docs/source/module_guide/: index.rst  scripts.rst  workchains.rst  workflows.rst
examples/: mace_config.yml  mace_output_parser.py  plot_results.py  run_atp.py  run_datageneration.py  run_lammps_extraction.py  run_nnip.py  run_nnip_bora.py  test_extracted_frames.py
examples/C_structures/: C_structures.xyz  dataset_input.xyz  mace_config.yml  run_atp.py
examples/Data/LAMMPS_pot44656_str44632_DT0.00242_N1000_P0.0_T50.0/: _scheduler-stderr.txt
examples/example_setup_codes/: mace_eval_leo.yml  mace_evaluation_portable.yml  mace_leo.yml  mace_postprocess_leo.yml  mace_preprocess_leo.yml
examples/graphene/: gr8x8.xyz  lammps_md_params.yml  mace_config (copy).yml  mace_config.yml  meta_config.yml  run_atp.py  run_atp_meta.py
examples/graphene_example/: mace_config.yml  run_atp.py
examples/old_scripts/: run_datageneration.py  run_evaluation.py
examples/setup_codes/: lammps_leo.yml  leonardo.yml  leonardo_bind.yml  leonardo_mace.yml  mace_evaluation_leo.yml  mace_leo.yml  mace_leo_037.yml  mace_postprocess_leo.yml  mace_preprocess_leo.yml  qe_leo.yml
module_guide/: parsers.html  scripts.html
module_guide/calculations/: evaluation.html  mace.html
module_guide/workchains/: abinitio_labelling_wc.html  augmentation_wc.html  exploration_wc.html  index.html  mace_wc.html  training_wc.html  trains_pot_wc.html
source/: index.html
source/module_guide/: datatypes.html  index.html  parsers.html  scripts.html
source/module_guide/calculations/: evaluation.html  index.html  mace.html
source/module_guide/workchains/: abinitio_labelling_wc.html  augmentation_wc.html  exploration_wc.html  index.html  mace_wc.html  training_wc.html  trains_pot_wc.html
source/user_guide/: index.html
source/user_guide/get_started/: index.html
src/NNIPdevelopement/LammpsWorkChain/: setup.py
src/NNIPdevelopement/MaceWorkChain/: setup.py
src/NNIPdevelopement/QEWorkChain/: setup.py
src/NNIPdevelopement/aiida-mace-base/: pyproject.toml
src/NNIPdevelopement/datageneration/: README.md  __init__.py  datageneration.py
src/NNIPdevelopement/nnip_wc/: nnip_wc.py
src/NNIPdevelopment/datageneration/: datageneration.py
src/NNIPdevelopment/evaluation/: calculations.py  evaluation.yml  parsers.py
src/NNIPdevelopment/nnip_wc/: nnip_wc.py
src/aiida_trains_pot/: __init__.py
src/aiida_trains_pot/aiida_trains_pot_workflow/: abinitiolabelling_wc.py  aiida_trains_pot_workflow.py  exploration_wc.py  mdexploration_wc.py  training_wc.py
src/aiida_trains_pot/data/: pesdata.py  psedata.py
src/aiida_trains_pot/evaluation/: calculations.py  parsers.py
src/aiida_trains_pot/utils/: __init__.py  generate_config.py  install_portable_codes.py  lammps_pair_coeffs.py  plotting.py  restart.py  tools.py
user_guide/get_started/: index.html
(+252 files in other folders)
