[build-system]
# build the package with [flit](https://flit.readthedocs.io)
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "NNIPdevelopment"
dynamic = ["version"]
description = "AiiDA workchain to generate data for training and testing of neural networks."
authors = [{name = "Nataliia Manko"}, {name = "Davide Bidoggia"}, {name = "Antimo Marrazzo"}, {name = "Maria Peressi"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Development Status :: 4 - Beta",
    "Framework :: AiiDA"
]
keywords = ["aiida", "workchain"]
requires-python = ">=3.7"
dependencies = [
    "aiida-core>=2.5,<3",
    "voluptuous",
    "ase",
    "numba"
]

[project.urls]
Source = "https://github.com/mankoNm/NNIPDevelopment"



[project.entry-points.'aiida.workflows']
"NNIPdevelopment.datageneration" = "NNIPdevelopment.datageneration.datageneration:DataGenerationWorkChain"
"NNIPdevelopment.qe" = "NNIPdevelopment.QEWorkChain.QEWorkChain.QECalculationWorkChain:QECalculationWorkChain"
"NNIPdevelopment.macetrain" = "NNIPdevelopment.mace.mace_train_wc.mace_train_wc:MaceTrainWorkChain"
"NNIPdevelopment.lammpsmd" = "NNIPdevelopment.lammps.lammps_wc.lammps_wc:LammpsWorkChain"
"NNIPdevelopment.nnipdevelopment" = "NNIPdevelopment.nnip_wc.nnip_wc:NNIPWorkChain"
"NNIPdevelopment.lammpsextraction" = "NNIPdevelopment.lammps.lammps_frame_extraction.lammps_frame_extraction:LammpsFrameExtraction"


[project.entry-points.'aiida.calculations']
"NNIPdevelopment.macetrain" = "NNIPdevelopment.mace.mace_train_plugin.calculations:MaceTrainCalculation"
"NNIPdevelopment.lammpsmd" = "NNIPdevelopment.lammps.lammps_plugin.calculations:LammpsBaseCalculation"
"NNIPdevelopment.evaluation" = "NNIPdevelopment.evaluation.calculations:EvaluationCalculation"

[project.entry-points.'aiida.parsers']
"NNIPdevelopment.macetrain" = "NNIPdevelopment.mace.mace_train_plugin.parsers:MaceBaseParser"
"NNIPdevelopment.lammpsmd" = "NNIPdevelopment.lammps.lammps_plugin.parsers:LammpsBaseParser"
"NNIPdevelopment.evaluation" = "NNIPdevelopment.evaluation.parsers:EvaluationParser"

#[project.entry-points."aiida.cmdline.data"]
#"diff" = "aiida_diff.cli:data_cli"

[tool.flit.module]
name = "NNIPdevelopment"
