[build-system]
# build the package with [flit](https://flit.readthedocs.io)
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "aiida-trainspot"
dynamic = ["version"]
description = "AiiDA workchain to generate data for training and testing of neural networks."
authors = [{name = "Nataliia Manko"}, {name = "Davide Bidoggia"}, {name = "Antimo Marrazzo"}, {name = "Maria Peressi"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Development Status :: 4 - Beta",
    "Framework :: AiiDA"
]
keywords = ["aiida", "workchain"]
requires-python = ">=3.7"
dependencies = [
    "aiida-core>=2.6.2,<3",
    "voluptuous",
    "ase==3.22.1",
    "numba",
    "aiida-quantumespresso",
    "h5py"
]

[project.urls]
Source = "https://github.com/aiida-trieste-developers/aiida-trains-pot"



[project.entry-points.'aiida.workflows']
"trains_pot.datasetaugmentation"   = "aiida_trains_pot.datasetaugmentation.datasetaugmentation_wc.datasetaugmentation_wc:DatasetAugmentationWorkChain"
"trains_pot.macetrain"        = "aiida_trains_pot.mace.mace_train_wc.mace_train_wc:MaceTrainWorkChain"
"trains_pot.labelling"        = "aiida_trains_pot.aiida_trains_pot_workflow.abinitiolabelling_wc:AbInitioLabellingWorkChain"
"trains_pot.training"         = "aiida_trains_pot.aiida_trains_pot_workflow.training_wc:TrainingWorkChain"
"trains_pot.exploration"      = "aiida_trains_pot.aiida_trains_pot_workflow.exploration_wc:ExplorationWorkChain"
"trains_pot.lammpsmd"         = "aiida_trains_pot.lammps.lammps_wc.lammps_wc:LammpsWorkChain"
"trains_pot.workflow"         = "aiida_trains_pot.aiida_trains_pot_workflow.aiida_trains_pot_workflow:TrainsPotWorkChain"



[project.entry-points.'aiida.calculations']
"trains_pot.macetrain"        = "aiida_trains_pot.mace.mace_train_plugin.calculations:MaceTrainCalculation"
"trains_pot.lammpsmd"         = "aiida_trains_pot.lammps.lammps_plugin.calculations:LammpsBaseCalculation"
"trains_pot.evaluation"       = "aiida_trains_pot.evaluation.calculations:EvaluationCalculation"

[project.entry-points.'aiida.parsers']
"trains_pot.macetrain"        = "aiida_trains_pot.mace.mace_train_plugin.parsers:MaceBaseParser"
"trains_pot.lammpsmd"         = "aiida_trains_pot.lammps.lammps_plugin.parsers:LammpsBaseParser"
"trains_pot.evaluation"       = "aiida_trains_pot.evaluation.parsers:EvaluationParser"

[project.entry-points."aiida.data"]
"pesdata"                 = "aiida_trains_pot.data.pesdata:PESData"



##[project.entry-points."aiida.cmdline.data"]
[project.scripts]
portable_codes_installation = "aiida_trains_pot.utils.install_portable_codes:main"

[project.optional-dependencies]
docs = [
    "aiida-core~=2.5",
    "docutils",
    "sphinx",
    "sphinx-copybutton",
    "sphinx-book-theme",
    "sphinx-click",
    "sphinxcontrib-contentui",
    "sphinxcontrib-details-directive",
    "furo",
    "markupsafe"
]

[tool.flit.module]
name = "aiida_trains_pot"
